sf-hrms/force-app/main/default/objects/Leave_Type__c/Leave_Type__c.object-meta.xml
<CustomObject>
    <label>Leave Type</label>
    <nameField>
        <label>Leave Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Leave Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>