sf-hrms/force-app/main/default/objects/Leave_Type__c/fields/Annual_Quota__c.field-meta.xml
<CustomField>
    <fullName>Annual_Quota__c</fullName>
    <label>Annual Quota</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>