sf-hrms/force-app/main/default/objects/Leave_Type__c/fields/Carry_Forward_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Carry_Forward_Allowed__c</fullName>
    <label>Carry Forward Allowed</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>