sf-hrms/force-app/main/default/objects/Leave_Type__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>Code</label>
    <type>Text</type>
    <length>10</length>
</CustomField>