sf-hrms/force-app/main/default/objects/Leave_Type__c/fields/Color__c.field-meta.xml
<CustomField><fullName>Color__c</fullName><label>Color</label><type>Text</type><length>7</length></CustomField>