sf-hrms/force-app/main/default/objects/Leave_Type__c/fields/Encashable__c.field-meta.xml
<CustomField><fullName>Encashable__c</fullName><label>Encashable</label><type>Checkbox</type><defaultValue>false</defaultValue></CustomField>