sf-hrms/force-app/main/default/objects/Leave_Type__c/fields/Half_Day_Allowed__c.field-meta.xml
<CustomField><fullName>Half_Day_Allowed__c</fullName><label>Half Day Allowed</label><type>Checkbox</type><defaultValue>true</defaultValue></CustomField>