sf-hrms/force-app/main/default/objects/Leave_Type__c/fields/Max_Carry_Forward__c.field-meta.xml
<CustomField><fullName>Max_Carry_Forward__c</fullName><label>Max Carry Forward Days</label><type>Number</type><precision>3</precision><scale>0</scale></CustomField>