sf-hrms/force-app/main/default/objects/Leave_Type__c/fields/Max_Consecutive_Days__c.field-meta.xml
<CustomField><fullName>Max_Consecutive_Days__c</fullName><label>Max Consecutive Days</label><type>Number</type><precision>3</precision><scale>0</scale></CustomField>