sf-hrms/force-app/main/default/objects/Leave_Type__c/fields/Min_Notice_Days__c.field-meta.xml
<CustomField><fullName>Min_Notice_Days__c</fullName><label>Min Notice Days</label><type>Number</type><precision>3</precision><scale>0</scale><defaultValue>0</defaultValue></CustomField>