sf-hrms/force-app/main/default/objects/Leave_Type__c/listViews/All_Leave_Types.listView-meta.xml
<ListView>
    <fullName>All_Leave_Types</fullName>
    <columns>NAME</columns>
    <columns>Code__c</columns>
    <columns>Annual_Quota__c</columns>
    <columns>Carry_Forward_Allowed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Leave Types</label>
</ListView>